# segmentron

./: README.md
page/: HLA2_Sergio_Test.dna  Hba_Sergio_Test.dna  about.html  help.html  index.html  page.html  py-worker.js  script.js  segmentron.js  styles.css  styles1.css  styles2.css  webworker.js
page/examples/input/: HLA2_Sergio_Test.fa  HLA2_Sergio_Test.txt
page/examples/output/: HLA2_Sergio_Test_segmentation_results_bed.bed  HLA2_Sergio_Test_segmentation_results_bedFR.bed  HLA2_Sergio_Test_segmentation_results_txt.txt
page/segmentron_v7/: 2023_09_19_segmentron_v7.py  function_list.py  test.py
segmentron/: README.md  package-lock.json  package.json  pyproject.toml
segmentron/src/: App.js
segmentron/src/Segmentron/: Preprocessing_Microhomology_Finder_v2.py  Preprocessing_Repeat_Finder_v2.py  __init__.py  file_scorer_v5.py  function_list_preprocessing.py  function_list_scoring.py  multiprocessed_dynamic_programming_v2.py  scoring_accumulator.py  scoring_forbidden_regions.py  scoring_length.py  scoring_microhomologies.py  scoring_overlap_composition.py  segmentron_multiprocessing_v1.py  segmentron_multiprocessing_v2.py  segmentron_v10.py  segmentron_v12.py  segmentron_v13.py  segmentron_v9.py
segmentron/src/Segmentron.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
segmentron/src/segmentron_regevlab/: 2023_11_18_segmentron_v8.py  Preprocessing_Microhomology_Finder_v2.py  function_list.py  init.py
segmentron/src/segmentron_regevlab/segmentron_regevlab.egg-info/: PKG-INFO  SOURCES.txt
