[project]
name = "Segmentron"
version = "10.0.1"
authors = [
  { name="Nicholas Wang", email="nyw2006@nyu.edu" },
]
description = "Function to calculate the set of smaller segments that can be used to combine to a given target DNA sequence."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]